fixed stars wrapping funny

--- a/less/app.less
+++ b/less/app.less
@@ -186,7 +186,7 @@ section {
 
         &:after { visibility: hidden; display: block; content: ""; clear: both; height: 0; }
         #countdown-bar-wrap {
-            width: 80%;
+            width: 70%;
             float: left;
             height: 44px;
             background: #666;
@@ -199,11 +199,12 @@ section {
             width: 0;
         }
         #countdown-lives {
-            width: 18%;
+            width: 28%;
             float: right;
             margin: 0 0 0 2%;
             padding: 0;
             list-style-type: none;
+            text-align: right;
             
             li {
                 display: inline-block;
